# ChangeLog for app-misc/cl-wireless-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-wireless-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-wireless-meta-10.9-r4.ebuild, +cl-wireless-meta-11.3.ebuild:
  Version bump.

*cl-wireless-meta-10.9-r4 (11 Feb 2011)

  11 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-wireless-meta-10.9-r3.ebuild, +cl-wireless-meta-10.9-r4.ebuild:
  Add net-wireless/rtl8192se net-wireless/rtl8192se-firmware

*cl-wireless-meta-10.9-r2 (26 Dec 2010)

  26 Dec 2010; Трацевский Александр <alex@gentoo.org>
  -cl-wireless-meta-10.9-r1.ebuild, +cl-wireless-meta-10.9-r2.ebuild:
  Added net-wireless/bluedevil for CLD

*cl-wireless-meta-10.9-r1 (23 Nov 2010)

  23 Nov 2010; Трацевский Александр <alex@gentoo.org>
  -cl-wireless-meta-10.9.ebuild, +cl-wireless-meta-10.9-r1.ebuild:
  Added net-wireless/broadcom-sta

  17 Oct 2010; Трацевский Александр <alex@gentoo.org>
  cl-wireless-meta-10.9.ebuild:
  Added net-wireless/iwl1000-ucode

  07 Oct 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> cl-wireless-meta-10.9.ebuild:
  Added net-wireless/iwl6000-ucode net-wireless/iwl6050-ucode

*cl-wireless-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-wireless-meta-10.8.81.ebuild, +cl-wireless-meta-10.9.ebuild:
  new version

  30 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-wireless-meta-10.8.81.ebuild:
  Added net-wireless/madwimax

  27 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-wireless-meta-10.8.81.ebuild:
  Added net-wireless/rt73-firmware

*cl-wireless-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-wireless-meta-10.5.83.ebuild, +cl-wireless-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-wireless-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>