@@ -1,2 +1,2 @@
-EBUILD cl-wireless-meta-11.3.ebuild 1011 RMD160 23b623f6fcc809d2517973f79b6ed291128e9a0e SHA1 08dcc400cb98888558207a5a4d3f457557862ea5 SHA256 63b21cabb110297102201d958f8a2932376c75580e53bf74724f9a0ad41bcb8f
-MISC ChangeLog 2126 RMD160 b57eea7adb06ad5df3efbd919c2ca8bf59f02677 SHA1 2c120f1d09926a9cf218c0e71ba3dc5e8c53eca6 SHA256 c6fec99f0872194957f0ba9f33412701c36d457fbcf3c34b288db9a60528e4ae
+EBUILD cl-wireless-meta-11.3-r1.ebuild 924 RMD160 2e85ef1701a0d8940ebd96ce91c7da43ff106c33 SHA1 b8f97814ecdfb5acd7991d78e62a5201d6bdb545 SHA256 1960ddb6a76280cd597a517618786d21120773e7c6639c62bff3b98e2624ff3f
+MISC ChangeLog 2319 RMD160 6843ef64da38fe26ec3bd500dd17d460eeb0e45f SHA1 eea1aec226596101c909089282bbc3c65c945151 SHA256 03d58b11dca8d14d3788164442c95ffae53c04c51b1c800ce18b4eb04fcb39b8
