@@ -11,12 +11,7 @@ SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 x86"
-IUSE="cdistro_desktop cdistro_CLD"
-
-#bluetooth
-RDEPEND="${RDEPEND}
-	cdistro_CLD? ( net-wireless/bluedevil )
-"
+IUSE="cdistro_desktop"
 
 # wi-fi
 RDEPEND="${RDEPEND}
