@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-wireless-meta-11.3-r1 (16 Mar 2011)
+
+  16 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-wireless-meta-11.3.ebuild, +cl-wireless-meta-11.3-r1.ebuild:
+  remove bluedevil
+
 *cl-wireless-meta-11.3 (09 Mar 2011)
 
   09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
